HREPTWO-1968: Upgrade to JR 1.5 internal permission interfaces - Implement AccessControlManager - Implement Privileges - Move from permissions check for privileges check (workflow) HREPTWO-1956: Fix some authorization tests HREPTWO-2126: Fix self exclusion Several other related other fixes: - update default content to use privileges - update tests to be a bit more robust (hopefully) - add BoilerPlateTest as an example of how to write tests - add MemoryTest as an example of how to use a proviler to check for mem leaks - some logging fixes
svn path=/hippo-ecm/trunk/; revision=17075